--- a/web/devices.html
+++ b/web/devices.html
@@ -13,11 +13,11 @@ function handleAllRows()
 }
 </script>
 
-<form name="deviceForm">
+<form name="deviceForm" method="post" action="/devices/remove">
 
 #STATUSMESSAGE#
 
-<input type="button" name="add_device" value="Add new device" class="submenu-button" />
+<input type="button" name="add_device" value="Add new device" class="submenu-button" onclick="document.location = '/devices/add';" />
 
 <div class="info" style="width: 100%;">
 	<div class="info-title" style="width: 98.8%;">Your devices</div>
@@ -33,5 +33,5 @@ function handleAllRows()
 	</table>
 </div>
 
-<div style="margin-top: 10px; margin-left: 10px; float: left;">With selected: <input type="button" name="deleteBtn" value="Delete" /></div>
+<div style="margin-top: 10px; margin-left: 10px; float: left;">With selected: <input type="submit" name="deleteBtn" value="Delete" /></div>
 </form>
