schema management web ui
added support for displaying schemas in the web ui
minor bug fixes

--- a/web/index.html
+++ b/web/index.html
@@ -1,3 +1,9 @@
+<div id="nav">
+	<ul>
+		<li><a href="/index">Home</a></li>
+	</ul>
+</div>
+
 #STATUSMESSAGE#
 
 <script type="text/javascript">
@@ -24,7 +30,7 @@ function loadLog() {
 		<tr>
 			<th>Schema</th>
 			<th style="padding-left: 5px;">Nr of devices</th>
-			<th>Start time</th>
+			<th>Time</th>
 		</tr>
 		#SCHEMAS#
 	</table>
