--- a/web/device_edit.html
+++ b/web/device_edit.html
@@ -2,14 +2,15 @@
 	<ul>
 		<li><a href="/index">Home</a></li>
 		<li>- <a href="/devices">Devices</a></li>
-		<li>- <a href="/devices/add">New device</a></li>
+		<li>- <a href="/devices/edit/#ID#">Device '#NAME#'</a></li>
 	</ul>
 </div>
 
-<h2 style="margin-top: 0; padding-top: 0;">New device</h2>
+<h2 style="margin-top: 0; padding-top: 0;">Edit device '#NAME#'</h2>
 
 <form action="/devices/save" method="post" name="device-form">
-<input type="hidden" name="action_type" value="add" />
+<input type="hidden" name="action_type" value="edit" />
+<input type="hidden" name="id" value="#ID#" />
 <table id="add-form" cellspacing="0" cellpadding="0" width="30%">
 	<tr>
 		<th>&nbsp;</th>
@@ -17,7 +18,7 @@
 	</tr>
 	<tr>
 		<td style="width: 150px; text-align: right; padding-right: 20px;">Name</td>
-		<td><input type="text" name="name" value="" /></td>
+		<td><input type="text" name="name" value="#NAME#" /></td>
 	</tr>
 	<tr>
 		<td>&nbsp;</td>
@@ -27,6 +28,7 @@
 		<td style="width: 150px; text-align: right; padding-right: 20px;">Device</td>
 		<td>
 			<select name="model">
+				<option value="#MODEL#" selected="selected">#MODEL#</option>
 				<option value="Brennenstuhl">Brennenstuhl</option>
 				<option value="Bye Bye Standby">Bye Bye Standby</option>
 				<option value="Chacon">Chacon</option>
@@ -60,6 +62,7 @@
 		<td style="width: 150px; text-align: right; padding-right: 20px;">Device Type</td>
 		<td>
 			<select name="type">
+				<option value="#TYPE#" selected="selected">#TYPENICENAME#</option>
 				<option value="Bell">Bell</option>
 				<option value="CodeSwitch">Code Switch</option>
 				<option value="SelfLearningDimmer">Self Learning Dimmer</option>
@@ -69,11 +72,11 @@
 	</tr>
 	<tr>
 		<td style="width: 150px; text-align: right; padding-right: 20px;">Remote Control</td>
-		<td><input type="text" name="remote_control_code" value="" style="width: 30%;" /></td>
+		<td><input type="text" name="remote_control_code" value="#REMOTECONTROL#" style="width: 30%;" /></td>
 	</tr>
 	<tr>
 		<td style="width: 150px; text-align: right; padding-right: 20px;">Unit Code</td>
-		<td><input type="text" name="unit_code" value="" style="width: 30%;" /></td>
+		<td><input type="text" name="unit_code" value="#UNIT#" style="width: 30%;" /></td>
 	</tr>
 	<tr>
 		<td>&nbsp;</td>
@@ -81,11 +84,11 @@
 	</tr>
 	<tr>
 		<td style="width: 150px; text-align: right; padding-right: 20px;">Sunrise</td>
-		<td><input type="checkbox" name="sunrise" value="on" style="border: 0; width: auto;" /> Turn off</td>
+		<td><input type="checkbox" name="sunrise" value="on" #CHECKEDSUNRISE# style="border: 0; width: auto;" /> Turn off</td>
 	</tr>
 	<tr>
 		<td style="width: 150px; text-align: right; padding-right: 20px;">Sunset</td>
-		<td><input type="checkbox" name="sunset" value="on" style="border: 0; width: auto;" /> Turn on</td>
+		<td><input type="checkbox" name="sunset" value="on" #CHECKEDSUNSET# style="border: 0; width: auto;" /> Turn on</td>
 	</tr>
 	<tr>
 		<td>&nbsp;</td>
