added almost full support for schemas
schema management now fully works (except conditions)
bug fixes again :-)

--- a/web/schemas.html
+++ b/web/schemas.html
@@ -24,7 +24,7 @@ function handleAllRows()
 
 #STATUSMESSAGE#
 
-<input type="button" name="add_device" value="Add new device" class="submenu-button" onclick="document.location = '/schemas/add';" />
+<input type="button" name="add_schema" value="Add new schema" class="submenu-button" onclick="document.location = '/schemas/add';" />
 
 <div class="info" style="width: 100%;">
 	<div class="info-title" style="width: 98.8%;">Your schemas</div>
